# jules-pytk

./: .flake8  .gitignore  LICENSE.md  README.md  pyproject.toml
examples/: .gitignore  config.md
jules_pytk/: config.py  experiment.py  utils.py
src/jules_pytk/: __init__.py  config.py  exceptions.py  experiment.py  fs.py  inputs.py  io.py  namelists.py  old_fs.py  run.py  runners.py  utils.py
src/jules_pytk/config/: __init__.py  base.py  config.py  inputs.py  namelists.py
src/jules_pytk/deprecated/: config.py  inputs.py  namelists.py
src/jules_tools/: __init__.py  config.py  runners.py  utils.py
tests/: _test_experiment.py  _test_inputs.py  _test_namelists.py  conftest.py  test_config.py  test_experiment.py  test_fs.py  test_inputs.py  test_namelists.py  test_runners.py
tests/data/experiment/: .gitignore
tests/data/test_config/: meta.json
tests/data/test_inputs/: generate_test_inputs.py  point_dataset.nc
