[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "jules_pytk"
authors = [
    {name = "Joe Marsh Rossney", email = "17361029+jmarshrossney@users.noreply.github.com"}
]
requires-python = ">= 3.12"
dependencies = [
    "f90nml",
    "netcdf4",
    "numpy",
    "pandas",
    "xarray",
]
description = "A Python toolkit for working with JULES"
license = 
readme = "README.md"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "isort"]

[tool.black]
target-version = ["py312"]
line-length = 88
