[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jules-pytk"
version = "0.2.0"
authors = [
    {name = "Joe Marsh Rossney", email = "17361029+jmarshrossney@users.noreply.github.com"}
]
description = "A Python toolkit for working with the JULES land surface model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "f90nml>=1.4.5",
    "netcdf4>=1.7.2",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "xarray>=2025.7.1",
]

[project.optional-dependencies]
udocker = [
    "udocker>=1.3.17",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
